# wildfire_protection

./: README.md  main.py  pyproject.toml
apps/: developer_dashboard.py  responder_dashboard.py
models/: evaluation_predictions.csv  mobilenet_v3_small_training_history.csv  resnet18_training_history.csv  training_history.csv
src/developer/: training_history.py  utils.py
src/responder/: feedback.py  predictor.py
src/wildfire_protection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
